- Neues Repo in das alte gepusht - GPS geaddet - Google GMS geaddet - Doppelter Listener-Call gefixt (Nur noch Lambda Calls)
	deleted:    .idea/.name
	modified:   .idea/gradle.xml
	modified:   .idea/misc.xml
	deleted:    .idea/vcs.xml
	deleted:    README.md
	modified:   app/build.gradle
	renamed:    app/src/androidTest/java/com/lolhaha/wakeapp/ExampleInstrumentedTest.java -> app/src/androidTest/java/com/android/wakeapp/ExampleInstrumentedTest.java
	modified:   app/src/main/AndroidManifest.xml
	new file:   app/src/main/java/com/android/wakeapp/BVGAPI.java
	new file:   app/src/main/java/com/android/wakeapp/MainActivity.java
	deleted:    app/src/main/java/com/lolhaha/wakeapp/FirstFragment.java
	deleted:    app/src/main/java/com/lolhaha/wakeapp/MainActivity.java
	deleted:    app/src/main/java/com/lolhaha/wakeapp/SecondFragment.java
	modified:   app/src/main/res/layout/activity_main.xml
	deleted:    app/src/main/res/layout/content_main.xml
	deleted:    app/src/main/res/layout/fragment_first.xml
	deleted:    app/src/main/res/layout/fragment_second.xml
	deleted:    app/src/main/res/menu/menu_main.xml
	deleted:    app/src/main/res/navigation/nav_graph.xml
	deleted:    app/src/main/res/values-land/dimens.xml
	deleted:    app/src/main/res/values-w1240dp/dimens.xml
	deleted:    app/src/main/res/values-w600dp/dimens.xml
	deleted:    app/src/main/res/values/dimens.xml
	modified:   app/src/main/res/values/strings.xml
	modified:   app/src/main/res/values/themes.xml
	renamed:    app/src/test/java/com/lolhaha/wakeapp/ExampleUnitTest.java -> app/src/test/java/com/android/wakeapp/ExampleUnitTest.java
	modified:   gradle/wrapper/gradle-wrapper.properties

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,22 @@
 <resources>
-    <string name="app_name">WakeApp</string>
-    <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="app_name">Wake TF App</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="timeButton">Ankunft</string>
+    <string name="opnvName">ÖPNV</string>
+    <string name="autoName">Auto</string>
+    <string name="vorbereitenTime">Vorbereitungszeit :</string>
+    <string name="gpsBtn">GPS</string>
+    <string name="gpsHint">Wohnort</string>
+    <string name="ankunftHint">Uhrzeit</string>
+    <string name="vorbereitungHint">Minuten</string>
+    <string name="gpsGranted">Let\'s Go!! (GPS Erlaubt)</string>
+    <string name="gpsDenied">GPS nicht erlaubt :(</string>
+    <string name="uhrPrefix24_1">0%1$d:0%2$d</string>
+    <string name="uhrPrefix24_2">%1$d:0%2$d</string>
+    <string name="uhrPrefix24_3">0%1$d:%2$d</string>
+    <string name="uhrPrefix24_4">%1$d:%2$d</string>
+    <string-array name="uhrPrefix12">
+        <item>AM</item>
+        <item>PM</item>
+    </string-array>
 </resources>
