--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,12 +9,15 @@
     <string name="gpsHint">Wohnort</string>
     <string name="ankunftHint">Uhrzeit</string>
     <string name="vorbereitungHint">Minuten</string>
+    <string name="mapsBtn">Maps</string>
+    <string name="mapsHint">Zielort</string>
     <string name="gpsGranted">Let\'s Go!! (GPS Erlaubt)</string>
     <string name="gpsDenied">GPS nicht erlaubt :(</string>
     <string name="uhrPrefix24_1">0%1$d:0%2$d</string>
     <string name="uhrPrefix24_2">%1$d:0%2$d</string>
     <string name="uhrPrefix24_3">0%1$d:%2$d</string>
     <string name="uhrPrefix24_4">%1$d:%2$d</string>
+    <string name="mapsSearchHint">Straße oder Postleihzahl</string>
     <string-array name="uhrPrefix12">
         <item>AM</item>
         <item>PM</item>
