Aenderung: BVGAPI endlich befuellt (nicht vollstaending) 	Aenderung: Intent Android System umgestellt (ist leider veraltet) 	new file:   .idea/.name 	new file:   .idea/codeStyles/Project.xml 	new file:   .idea/codeStyles/codeStyleConfig.xml 	new file:   .idea/vcs.xml 	modified:   app/build.gradle 	modified:   app/src/main/java/com/android/wakeapp/BVGAPI.java 	modified:   app/src/main/java/com/android/wakeapp/MainActivity.java 	modified:   app/src/main/java/com/android/wakeapp/MapsActivity.java 	modified:   app/src/main/res/layout/activity_main.xml 	modified:   app/src/main/res/values/strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="vorbereitungHint">Minuten</string>
     <string name="mapsBtn">Maps</string>
     <string name="mapsHint">Zielort</string>
+    <string name="berechnenBtn">Berechnen</string>
+    <string name="berechnenText">Drücke den Button unten!</string>
     <string name="gpsGranted">Let\'s Go!! (GPS Erlaubt)</string>
     <string name="gpsDenied">GPS nicht erlaubt :(</string>
     <string name="uhrPrefix24_1">0%1$d:0%2$d</string>
