Aenderungen: 	- BVGAPI/VBBAPI funktioniert nun 	- Zeit wird ausgerechnet 	- Bugs behoben 	Was fehlt noch?: 	- Speicherung in Datenbank oder Datei
	modified:   app/src/main/java/com/android/wakeapp/BVGAPI.java
	modified:   app/src/main/java/com/android/wakeapp/MainActivity.java
	modified:   app/src/main/res/layout/activity_main.xml
	modified:   app/src/main/res/values/strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="uhrPrefix24_3">0%1$d:%2$d</string>
     <string name="uhrPrefix24_4">%1$d:%2$d</string>
     <string name="mapsSearchHint">Straße oder Postleihzahl</string>
+    <string name="aufstehen">Aufstehen: %s</string>
+    <string name="mapsFail">Bitte erneut versuchen</string>
     <string-array name="uhrPrefix12">
         <item>AM</item>
         <item>PM</item>
